--- a/templates/10000coders.html
+++ b/templates/10000coders.html
@@ -12,6 +12,14 @@
                 width:100%;
             }
         } 
+         nav ul li {
+                width: 98%;
+                display: block;
+                border-bottom: 3px solid white;
+            }
+            nav{
+                padding: 0px;
+            }
 </style>
 </head>
 <body>
@@ -32,7 +40,7 @@
     </nav>
   </header>
 </div>
-<!-- <div class="wrapper row2">
+ <div class="wrapper row2">
   <div id="container" class="clear">
     <section id="slider" class="clear">
       <figure><img src="./images/murali sir.jpg" alt="">
