--- a/templates/movie_poster_style.css
+++ b/templates/movie_poster_style.css
@@ -118,17 +118,12 @@ div.wrapper{
     color:#919191; 
     background-color:#232323;
 }
-#header, #container, #footer{
+#container, #footer{
     display:block; 
     width:960px; 
     margin:0 auto;
 }
 
-nav ul{
-    margin:0; 
-    padding:0; 
-    list-style:none;
-}
 
 h1, h2, h3, h4, h5, h6{
     margin:0; 
