--- a/templates/10000coders_style.css
+++ b/templates/10000coders_style.css
@@ -288,33 +288,12 @@
             font-size: 13px;
         }
 
-        #header nav {
-            display: block;
-            float: right;
-            margin: 10px 0 0 0;
-            padding: 20px 0;
-            color: #C0BAB6;
-            background-color: #232323;
-        }
-
-        #header nav ul {
-            padding: 0 20px;
-        }
-
-        
-        #header nav li.last {
-            margin-right: 0;
-        }
-
-        #header nav li a {
-            color: #C0BAB6;
-            background-color: #232323;
-        }
-
-        #header nav li a:hover {
-            color: #FF9900;
-            background-color: #232323;
-        }
+        #header nav{display:block; float:right; margin:10px 0 0 0; padding:20px 0; color:#C0BAB6; background-color:#232323;}
+        #header nav ul{padding:0 20px;}
+        #header nav li{display:inline; margin-right:25px; text-transform:uppercase;}
+        #header nav li.last{margin-right:0;}
+        #header nav li a{color:#C0BAB6; background-color:#232323;}
+        #header nav li a:hover{color:#FF9900; background-color:#232323;}
 
         #container {
             padding: 30px 0;
