--- a/templates/T84_movie_poster.html
+++ b/templates/T84_movie_poster.html
@@ -74,7 +74,7 @@
     </nav>
   </header>
 </div>
-<!-- <div class="wrapper row2">
+<div class="wrapper row2">
   <div id="container" class="clear">
     <section id="slider"><a href="#"><img src="./images/power.jpg" width="960" height="360" alt=""></a></section>
     <section id="shout">
