--- a/HTML/RWD/Template_responsive/Template2.css
+++ b/HTML/RWD/Template_responsive/Template2.css
@@ -26,9 +26,7 @@ nav ul {
   display: inline-block;
   text-align: center;
 }
-figure {
-  padding-left: 0;
-}
+
 * {
   padding: 0;
   margin: 0;
@@ -298,134 +296,17 @@ footer {
 .f1_right {
   float: right;
 }
-[class*="col-"] {
-  width: 100%;
-}
-@media only screen and (min-width: 0px) and (max-width: 450px) {
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
+@media only screen and (max-width: 425px) {
   #header {
     width: 100%;
     background-color: red;
-  }
-  #header nav {
-    width: 100%;
   }
   #header nav ul li {
     display: block;
-    width: 100%;
     border-bottom: 3px solid white;
     padding: 10px;
   }
-  #container {
-    width: 100%;
-    background-color: blue;
-  }
-  #container #content {
-    width: 100%;
-  }
-  .one_quarter {
-    float: none;
-    width: 98%;
-  }
-  #container #homepage #latest figure {
-    margin-left: 15px;
-  }
-  #container #homepage #latest figure img {
-    width: 100%;
-  }
-  #container #homepage #latest figure figcaption {
-    width: 98%;
-    text-align: center;
-  }
-  .shout p {
-    display: block;
-    width: 100%;
-    background: blue;
-    text-align: center;
-    font-weight: bold;
-  }
-  /* #container #content #services ul li article figure img{
-
-  } */
-  #content #services ul li {
-    width: 100%;
-  }
-  #container #content #services ul li .clear figure img {
-    width: 98%;
-    background: green;
-  }
-  #container #content #services ul li article figure figcaption {
-    width: 100%;
-    text-align: center;
-  }
-  #container #right_column {
-    float: left;
-    width: 100%;
-    text-align: center;
-  }
-  /* #container #right_column h2 { 
-    width: 100%;
-    display: block;
-    background: red;
-  }
-  #container #right_column nav ul li {
-    width: 100%;
-    background-color: red;
-  }*/
-  #footer {
-    width: 100%;
-    display: block;
-  }
-}
-@media only screen and (min-width: 451px) and (max-width: 768px) {
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  #header {
-    width: 90%;
-  }
   #header nav {
     width: 100%;
-  }
-  #header nav ul {
-    text-align: center;
-  }
-  #container {
-    width: 100%;
-    background-color: blue;
-  }
-  #container #homepage #latest article {
-    margin-top: 10px;
-  }
-  .one_quarter {
-    display: block;
-    width: 47%;
-  }
-  #container #homepage #latest figure {
-    margin-left: 15px;
-  }
-  #container #homepage #latest figure img {
-    width: 100%;
-  }
-  #container #homepage #latest figure figcaption {
-    text-align: center;
-  }
-  #container #content #services ul li .clear figure img {
-    margin-left: 15px;
-  }
-  #container #right_column {
-    float: left;
-    width: 100%;
-    text-align: center;
-  }
-  #footer {
-    width: 100%;
-    display: block;
   }
 }
