--- a/HTML/RWD/Template_responsive/Template4.css
+++ b/HTML/RWD/Template_responsive/Template4.css
@@ -1,273 +1,370 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
 body {
-    font-size: 13px;
-    font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 13px;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-div.wrapper{
-    display: block;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    text-align: left;
+div.wrapper {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  text-align: left;
 }
-.row1{
-    color: #C0BAB6;
-    background-color: #333333;
-    overflow: auto;
+.row1 {
+  color: #c0bab6;
+  background-color: #333333;
+  overflow: auto;
 }
-#header{
-    display: block;
-    width: 960px;
-    margin: 0 auto;
-    padding: 20px 0;
+#header {
+  display: block;
+  width: 960px;
+  margin: 0 auto;
+  padding: 20px 0;
 }
-.clear{
-    clear: both;
+.clear {
+  clear: both;
 }
-#header #hgroup{
-    float: left;
-    margin: 0 0 20px 0;
+#header #hgroup {
+  float: left;
+  margin: 0 0 20px 0;
 }
-#header #hgroup h1{
-    font-size: 36px;
-    margin: 0;
-    padding: 0;
-    font-weight: normal;
-    font-style: normal;
-    text-transform: none;
-    line-height: normal;
-    background-color: #333333;
+#header #hgroup h1 {
+  font-size: 36px;
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-style: normal;
+  text-transform: none;
+  line-height: normal;
+  background-color: #333333;
 }
-.row1 a{
-    color: #C0BAB6;
-    background-color: #333333;
+.row1 a {
+  color: #c0bab6;
+  background-color: #333333;
 }
-a{
-    outline: none;
-    text-decoration: none;
+a {
+  outline: none;
+  text-decoration: none;
 }
 
-#header #hgroup h2{
-    font-size: 13px;
-    margin: 0;
-    padding: 0;
-    font-weight: normal;
-    font-style: normal;
-    text-transform: none;
-    line-height: normal;
-
+#header #hgroup h2 {
+  font-size: 13px;
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-style: normal;
+  text-transform: none;
+  line-height: normal;
 }
-#header form{
-    display: block;
-    width: 290px;
-    float: right;
-    padding: 0;
-    margin: 20px 0;
-    border: none;
+#header form {
+  display: block;
+  width: 290px;
+  float: right;
+  padding: 0;
+  margin: 20px 0;
+  border: none;
 }
-fieldset{
-    padding: 0;
-    margin: 0;
-    border: none;
+fieldset {
+  padding: 0;
+  margin: 0;
+  border: none;
 }
-#header form input{
-    display: block;
-    float: left;
-    width: 200px;
-    margin: 0;
-    padding: 5px;
-    color: #C0BAB6;
-    background-color: #232323;
-    border: 1px solid #666666;
+#header form input {
+  display: block;
+  float: left;
+  width: 200px;
+  margin: 0;
+  padding: 5px;
+  color: #c0bab6;
+  background-color: #232323;
+  border: 1px solid #666666;
 }
-input{
-    font-size: 12px;
-    font-family: Georgia,"Times New Roman",Times,serif;
+input {
+  font-size: 12px;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-#header form #sf_submit{
-    display: block;
-    float: right;
-    width: 70px;
-    font-size: 12ox;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    background-color: #FF9900;
-    border: none;
-    cursor: pointer;
+#header form #sf_submit {
+  display: block;
+  float: right;
+  width: 70px;
+  font-size: 12ox;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #ff9900;
+  border: none;
+  cursor: pointer;
 }
-nav{
-    display: block;
-    width: 100%;
-    padding: 20px 0;
-    margin: 0;
-    color: #C0BAB6;
-    background-color: #232323;
-    clear: both;
+nav {
+  display: block;
+  width: 100%;
+  padding: 20px 0;
+  margin: 0;
+  color: #c0bab6;
+  background-color: #232323;
+  clear: both;
 }
-#header nav ul{
-    padding: 0 20px;
-    margin: 0;
-    list-style: none;
+#header nav ul {
+  padding: 0 20px;
+  margin: 0;
+  list-style: none;
 }
-#header nav ul li{
-    display: inline;
-    margin-right: 25px;
-    text-transform: uppercase;
+#header nav ul li {
+  display: inline;
+  margin-right: 25px;
+  text-transform: uppercase;
 }
-#header nav ul li a:hover{
-    color: #FF9900;
-    cursor: pointer;
+#header nav ul li a:hover {
+  color: #ff9900;
+  cursor: pointer;
 }
-.row1 ul li a{
-    background-color: #232323;
+.row1 ul li a {
+  background-color: #232323;
 }
-.row2{
-    color: #979797;
-    background-color: #FFFFFF;
+.row2 {
+  color: #979797;
+  background-color: #ffffff;
 }
-#container{
-    display: block;
-    width: 960px;
-    margin: 0 auto;
-    padding: 30px 0;
-    overflow: auto;
+#container {
+  display: block;
+  width: 960px;
+  margin: 0 auto;
+  padding: 30px 0;
+  overflow: auto;
 }
-.clear{
-    clear: both;
+.clear {
+  clear: both;
 }
-#container section{
-    display: block;
-    width: 100%;
-    margin: 0 0 30px 0;
-    padding: 0;
+#container section {
+  display: block;
+  width: 100%;
+  margin: 0 0 30px 0;
+  padding: 0;
 }
-.row2 a{
-    color: #FF9900;
-    background-color: #FFFFFF;
+.row2 a {
+  color: #ff9900;
+  background-color: #ffffff;
 }
 img {
-    margin: 0;
-    padding: 0;
-    border: none;
-    line-height: normal;
-    vertical-align: middle;
+  margin: 0;
+  padding: 0;
+  border: none;
+  line-height: normal;
+  vertical-align: middle;
 }
-#container #shout{
-    display: block;
-    width: 930px;
-    padding: 15px;
-    font-size: 16px;
-    line-height: 1cm;
-    color: #979797;
-    background-color: #EEEEEE;
-    text-transform: uppercase;
-    text-align: justify;
+#container #shout {
+  display: block;
+  width: 930px;
+  padding: 15px;
+  font-size: 16px;
+  line-height: 1cm;
+  color: #979797;
+  background-color: #eeeeee;
+  text-transform: uppercase;
+  text-align: justify;
 }
-#container #homepage{
-    display: block;
-    width: 100%;
-    line-height: 1cm;
+#container #homepage {
+  display: block;
+  width: 100%;
+  line-height: 1cm;
 }
-#container #homepage h1{
-    margin-bottom: 25px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #D6D6D6;
-    font-size: 16px;
-    font-weight: bold;
-    font-style: normal;
-    line-height: normal;
-    text-transform: uppercase;
+#container #homepage h1 {
+  margin-bottom: 25px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #d6d6d6;
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+  line-height: normal;
+  text-transform: uppercase;
 }
-#container #homepage #services article{
-    float: left;
-    width: 300px;
-    margin: 0 30px 0 0;
-    padding: 0;
+#container #homepage #services article {
+  float: left;
+  width: 300px;
+  margin: 0 30px 0 0;
+  padding: 0;
 }
-#container #homepage #services figure{
-    padding: 0;
-    margin: 0;
-    float: left;
+#container #homepage #services figure {
+  padding: 0;
+  margin: 0;
+  float: left;
 }
-#container #homepage #services strong{
-    float: left;
-    margin: 8px 0 0 10px;
-    padding: 0;
-    font-size: 14px;
-    font-weight: bold;
-    text-transform: uppercase;
+#container #homepage #services strong {
+  float: left;
+  margin: 8px 0 0 10px;
+  padding: 0;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
-#container #homepage #services p{
-    display: block;
-    margin: 0;
-    padding: 5px 0 0 0;
-    clear: both;
-    line-height: 0.5cm;
+#container #homepage #services p {
+  display: block;
+  margin: 0;
+  padding: 5px 0 0 0;
+  clear: both;
+  line-height: 0.5cm;
 }
-#container .more{
-    text-align: right;
+#container .more {
+  text-align: right;
 }
 #container #homepage #services .last {
-    margin-right: 0;
+  margin-right: 0;
 }
-#container .last{
-    margin: 0;
+#container .last {
+  margin: 0;
 }
-.one_quarter{
-    width: 225px;
-    display: block;
-    float: left;
-    margin: 0 20px 0 0;
-    text-align: justify;
+.one_quarter {
+  width: 225px;
+  display: block;
+  float: left;
+  margin: 0 20px 0 0;
+  text-align: justify;
 }
-#container #homepage #latest figure{
-    padding: 4px;
-    border: 1px solid #D6D6D6;
-    text-align: center;
-    display: block;
-    margin: 0;
+#container #homepage #latest figure {
+  padding: 4px;
+  border: 1px solid #d6d6d6;
+  text-align: center;
+  display: block;
+  margin: 0;
 }
 #container #homepage #latest figcaption {
-    padding: 4px;
-    text-align: center;
-    color: #979797;
-    background-color: #EEEEEE;
-    text-transform: uppercase;
-    text-align: center;
-    display: block;
+  padding: 4px;
+  text-align: center;
+  color: #979797;
+  background-color: #eeeeee;
+  text-transform: uppercase;
+  text-align: center;
+  display: block;
+  margin: 0;
+}
+.lastbox {
+  margin-right: 0;
+}
+.row3 {
+  color: #919191;
+  background-color: #232323;
+}
+.clear {
+  clear: both;
+}
+.row3 {
+  color: #919191;
+  background-color: #232323;
+  height: 55px;
+}
+.row3 a {
+  color: #919191;
+}
+#footer {
+  padding: 20px 0 20px 0;
+  display: block;
+  width: 960px;
+  margin: 0 auto;
+}
+.f1_left {
+  float: left;
+}
+.f1_right {
+  float: right;
+}
+@media only screen and (min-width: 0px) and (max-width: 450px) {
+  * {
+    padding: 0;
     margin: 0;
-}
-.lastbox{
-    margin-right: 0;
-}
-.row3{
-    color: #919191;
-    background-color: #232323;
-}
-.clear{
-    clear: both;
-}
-#footer{
-    padding: 20px 0;
+    box-sizing: border-box;
+  }
+  #header {
+    width: 100%;
+  }
+  /* #header #hgroup {
+    padding-left: 90px;
+  }
+  #header form {
+    float: none;
+    padding-left: 90px;
+  } */
+  #header nav {
+    width: 100%;
+  }
+  #header nav ul li {
     display: block;
-    width: 960px;
-    height: 18px;
+    padding: 10px;
+    text-align: center;
+    border-bottom: 3px solid white;
+  }
+  #container {
+    width: 100%;
+  }
+  #container #slider img {
+    width: 100%;
+  }
+  #container #shout {
+    width: 100%;
+    font-size: 10px;
+  }
+  #container #homepage {
+    width: 100%;
+  }
+  #container #homepage #services article {
+    width: 100%;
+  }
+  .one_quarter {
+    width: 100%;
+  }
+  #container #homepage #latest .one_quarter figure img {
+    width: 100%;
+  }
+  #footer {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 451px) and (max-width: 768px) {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  #header {
+    width: 100%;
+  }
+  #header #hgroup {
+    padding-left: 90px;
+  }
+
+  #header nav {
+    width: 90%;
     margin: 0 auto;
-}
-#footer p{
-    margin: 0;
-    padding: 0 0 20px 0;
-}
-.row3 a{
-    color: #919191;
-}
-.f1_left{
-    float: left;
-}
-.f1_right{
-    float: right;
+    text-align: center;
+  }
+  #container {
+    width: 100%;
+  }
+  #container #slider img {
+    width: 100%;
+  }
+  #container #shout {
+    width: 100%;
+    font-size: 20px;
+  }
+  #container #homepage {
+    width: 100%;
+  }
+  #container #homepage #services article {
+    width: 100%;
+  }
+  .one_quarter {
+    width: 47%;
+  }
+  #container #homepage #latest .one_quarter figure img {
+    width: 100%;
+  }
+  #container #homepage #latest .one_quarter figure figcaption {
+    width: 100%;
+  }
+  #footer {
+    width: 100%;
+  }
 }
