--- a/October29 2021/Templates/Template 1/basic-88/TEMPLATE5RESPONSE.html
+++ b/October29 2021/Templates/Template 1/basic-88/TEMPLATE5RESPONSE.html
@@ -160,9 +160,9 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 
       #header {
         width: 100%;
-        background-color:lightcyan;s
+        background-color:lightcyan;
         padding: 0px;
-        margin: 0px
+        margin: 0px;
       }
 
       #header #hgroup {
