--- a/template_RWD/T87_flipcart_style.css
+++ b/template_RWD/T87_flipcart_style.css
@@ -452,4 +452,8 @@
             margin: 0;
             padding: 0;
         }
+        #footer{
+            width: 100%;
+            
+        }
    
