--- a/HTML/Templates/Templateresponsives/Responsive83.css
+++ b/HTML/Templates/Templateresponsives/Responsive83.css
@@ -1,4 +1,3 @@
-
 HTML 5 Template Name: Basic 83
 
 
@@ -106,3 +105,35 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 
 #footer{padding:20px 0;}
 #footer p{margin:0; padding:0;}
+@media only screen and  (max-width: 845px) {
+    #header {
+      width: 100%;
+    }
+    
+    #header nav {
+      width: 100%;
+    }
+    #header nav ul li {
+      display: block;
+      padding: 10px;
+      text-align: center;
+      border-bottom: 3px solid black;
+    }
+    #container {
+      width: 100%;
+    }
+    #container #slider img {
+      width: 100%;
+    }
+    #container #homepage #services .one_quarter {
+      width: 100%;
+      font-size: 16px;
+    }
+    #container #homepage .three_quarter {
+      width: 100%;
+    }
+    #footer {
+      width: 100%;
+    }
+  }
+  
