--- a/HTML/RWD/Template_responsive_CSS_Apply/Template4.css
+++ b/HTML/RWD/Template_responsive_CSS_Apply/Template4.css
@@ -5,32 +5,31 @@
 body {
   font-size: 13px;
   font-family: Georgia, "Times New Roman", Times, serif;
-  color: #919191;
 }
 div.wrapper {
   display: block;
-  width: 100%;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  width: 100%;
   text-align: left;
 }
 .row1 {
   color: #c0bab6;
   background-color: #333333;
+  overflow: auto;
 }
 #header {
-  padding: 20px 0;
-  width: 960px;
   display: block;
+  width: 960px;
   margin: 0 auto;
-  overflow: auto;
+  padding: 20px 0;
 }
 .clear {
   clear: both;
 }
 #header #hgroup {
   float: left;
-  padding: 0 0 20px 0;
+  margin: 0 0 20px 0;
 }
 #header #hgroup h1 {
   font-size: 36px;
@@ -40,15 +39,7 @@ div.wrapper {
   font-style: normal;
   text-transform: none;
   line-height: normal;
-}
-#header #hgroup h2 {
-  font-size: 13px;
-  padding: 0;
-  margin: 0;
-  font-style: normal;
-  font-weight: normal;
-  text-transform: none;
-  line-height: normal;
+  background-color: #333333;
 }
 .row1 a {
   color: #c0bab6;
@@ -58,34 +49,81 @@ a {
   outline: none;
   text-decoration: none;
 }
-#header nav {
+
+#header #hgroup h2 {
+  font-size: 13px;
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-style: normal;
+  text-transform: none;
+  line-height: normal;
+}
+#header form {
   display: block;
-  margin: 10px 0 0 0;
-  padding: 20px 0;
+  width: 290px;
   float: right;
+  padding: 0;
+  margin: 20px 0;
+  border: none;
+}
+fieldset {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+#header form input {
+  display: block;
+  float: left;
+  width: 200px;
+  margin: 0;
+  padding: 5px;
   color: #c0bab6;
   background-color: #232323;
+  border: 1px solid #666666;
+}
+input {
+  font-size: 12px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+#header form #sf_submit {
+  display: block;
+  float: right;
+  width: 70px;
+  font-size: 12ox;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #ff9900;
+  border: none;
+  cursor: pointer;
+}
+nav {
+  display: block;
+  width: 100%;
+  padding: 20px 0;
+  margin: 0;
+  color: #c0bab6;
+  background-color: #232323;
+  clear: both;
 }
 #header nav ul {
-  list-style: none;
-  margin-top: 0;
   padding: 0 20px;
+  margin: 0;
+  list-style: none;
 }
 #header nav ul li {
   display: inline;
   margin-right: 25px;
   text-transform: uppercase;
 }
-#header nav ul li a {
-  columns: #c0bab6;
-  background-color: #232323;
-}
 #header nav ul li a:hover {
   color: #ff9900;
+  cursor: pointer;
 }
-/* #header nav ul li.last {
-  margin-right: 0;
-} */
+.row1 ul li a {
+  background-color: #232323;
+}
 .row2 {
   color: #979797;
   background-color: #ffffff;
@@ -97,102 +135,82 @@ a {
   padding: 30px 0;
   overflow: auto;
 }
+.clear {
+  clear: both;
+}
 #container section {
   display: block;
   width: 100%;
-  margin: 0 0 50px 0;
+  margin: 0 0 30px 0;
   padding: 0;
 }
-figure {
-  display: block;
-  padding: 0;
-  margin: 0;
-}
-#container #slider figure img {
-  display: block;
-  float: right;
-  width: 630px;
-  height: 300px;
+.row2 a {
+  color: #ff9900;
+  background-color: #ffffff;
 }
 img {
   margin: 0;
   padding: 0;
   border: none;
   line-height: normal;
+  vertical-align: middle;
 }
-#container #slider figure figcaption {
+#container #shout {
   display: block;
-  float: left;
-  margin: 0;
-  width: 280px;
-  height: 260px;
-  padding: 20px;
-
-  columns: #989898;
-  background-color: #dedede;
-  line-height: 0.6cm;
-}
-#container #slider figure h2 {
-  font-size: 42px;
-  font-weight: normal;
-  font-style: italic;
-  text-transform: none;
-  line-height: normal;
-  padding: 0;
-  margin: 0;
-}
-footer {
-  display: block;
-  margin: 0;
-  padding: 0;
-}
-.more {
-  text-align: right;
-}
-.row2 a {
-  color: #ff9900;
+  width: 930px;
+  padding: 15px;
+  font-size: 16px;
+  line-height: 1cm;
+  color: #979797;
+  background-color: #eeeeee;
+  text-transform: uppercase;
+  text-align: justify;
 }
 #container #homepage {
   display: block;
   width: 100%;
+  line-height: 1cm;
 }
-article {
-  padding: 0;
-}
-.one_third {
-  width: 300px;
-  display: block;
-  float: left;
-  margin: 0 30px 0 0;
-}
-#container #homepage #services article h2 {
-  font-size: 14px;
-  margin-bottom: 15px;
-  padding-top: 50px;
-}
-h2 {
-  padding: 0;
-  margin: 0;
+#container #homepage h1 {
+  margin-bottom: 25px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #d6d6d6;
   font-size: 16px;
   font-weight: bold;
   font-style: normal;
   line-height: normal;
   text-transform: uppercase;
 }
-#container #homepage #services article img {
+#container #homepage #services article {
   float: left;
-  width: 80px;
-  height: 80px;
-  margin: 0 10px 10px 0;
-  padding: 4px;
-  border: 1px solid #dedede;
-}
-#container #homepage #services article p {
-  margin: 0;
+  width: 300px;
+  margin: 0 30px 0 0;
   padding: 0;
+}
+#container #homepage #services figure {
+  padding: 0;
+  margin: 0;
+  float: left;
+}
+#container #homepage #services strong {
+  float: left;
+  margin: 8px 0 0 10px;
+  padding: 0;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+#container #homepage #services p {
+  display: block;
+  margin: 0;
+  padding: 5px 0 0 0;
+  clear: both;
   line-height: 0.5cm;
 }
-.lastbox {
+#container .more {
+  text-align: right;
+}
+#container #homepage #services .last {
   margin-right: 0;
 }
 #container .last {
@@ -203,39 +221,31 @@ h2 {
   display: block;
   float: left;
   margin: 0 20px 0 0;
+  text-align: justify;
 }
-#container #homepage #latest article figure img {
-  margin: 40px 0 10px 0;
+#container #homepage #latest figure {
   padding: 4px;
   border: 1px solid #d6d6d6;
-}
-img {
-  line-height: normal;
-  vertical-align: middle;
-}
-#container #homepage #latest article figure h2 {
-  font-size: 14px;
+  text-align: center;
+  display: block;
   margin: 0;
-  padding: 0;
-  padding-bottom: 15px;
-  font-weight: bold;
-  font-style: normal;
-  line-height: normal;
-  text-transform: uppercase;
 }
-#container #homepage #latest article figure p {
-  line-height: 0.6cm;
+#container #homepage #latest figcaption {
+  padding: 4px;
+  text-align: center;
+  color: #979797;
+  background-color: #eeeeee;
+  text-transform: uppercase;
+  text-align: center;
+  display: block;
+  margin: 0;
 }
 .lastbox {
   margin-right: 0;
 }
-.spacer {
-  display: block;
-  width: 100%;
-  height: 30px;
-  margin: 0;
-  padding: 0;
-  clear: both;
+.row3 {
+  color: #919191;
+  background-color: #232323;
 }
 .clear {
   clear: both;
@@ -243,23 +253,16 @@ img {
 .row3 {
   color: #919191;
   background-color: #232323;
-  overflow: auto;
-  position: fixed;
-  top: 600px;
+  height: 55px;
 }
 .row3 a {
   color: #919191;
-  background-color: #232323;
 }
 #footer {
+  padding: 20px 0 20px 0;
   display: block;
   width: 960px;
   margin: 0 auto;
-  padding: 20px 0;
-}
-#footer p {
-  margin: 0;
-  padding: 0 0 20px 0;
 }
 .f1_left {
   float: left;
@@ -276,6 +279,13 @@ img {
   #header {
     width: 100%;
   }
+  /* #header #hgroup {
+    padding-left: 90px;
+  }
+  #header form {
+    float: none;
+    padding-left: 90px;
+  } */
   #header nav {
     width: 100%;
   }
@@ -288,24 +298,24 @@ img {
   #container {
     width: 100%;
   }
-  #container #slider {
+  #container #slider img {
     width: 100%;
   }
-  #container #slider figure img {
+  #container #shout {
+    width: 100%;
+    font-size: 10px;
+  }
+  #container #homepage {
     width: 100%;
   }
-  #container #slider figure figcaption {
+  #container #homepage #services article {
     width: 100%;
   }
-  #container #homepage #services .one_third {
+  .one_quarter {
     width: 100%;
   }
-  #container #homepage #latest .one_quarter {
+  #container #homepage #latest .one_quarter figure img {
     width: 100%;
-  }
-  #container #homepage #latest .one_quarter img {
-    width: 100%;
-    height: 200px;
   }
   #footer {
     width: 100%;
@@ -328,30 +338,28 @@ img {
     width: 90%;
     margin: 0 auto;
     text-align: center;
-    margin: 30px;
   }
   #container {
     width: 100%;
   }
-  #container #slider {
+  #container #slider img {
     width: 100%;
   }
-  #container #slider figure img {
-    width: 49%;
-    height: 260px;
+  #container #shout {
+    width: 100%;
+    font-size: 20px;
   }
-  #container #slider figure figcaption {
-    width: 50%;
+  #container #homepage {
+    width: 100%;
   }
-  #container #homepage #services .one_third {
-    width: 45%;
+  #container #homepage #services article {
+    width: 100%;
   }
-  #container #homepage #latest .one_quarter {
+  .one_quarter {
     width: 47%;
   }
   #container #homepage #latest .one_quarter figure img {
     width: 100%;
-    height: 180px;
   }
   #container #homepage #latest .one_quarter figure figcaption {
     width: 100%;
