--- a/HTML/Templates/Templateresponsives/Responsive84.html
+++ b/HTML/Templates/Templateresponsives/Responsive84.html
@@ -3,7 +3,7 @@
 <head>
 <title>Basic 84</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="./Basic84.css" type="text/css">
+<link rel="stylesheet" href="./Responsive84.css" type="text/css">
 
 </head>
 <body>
