--- a/HTML/Templates/Templateresponsives/Responsive84.css
+++ b/HTML/Templates/Templateresponsives/Responsive84.css
@@ -120,3 +120,51 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 
 #footer{padding:20px 0;}
 #footer p{margin:0; padding:0;}
+@media only screen and (min-width: 415px) and (max-width: 786px) {
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+    #header {
+      width: 90%;
+    }
+    #header nav {
+      width: 100%;
+    }
+    #header nav ul {
+      text-align: center;
+    }
+    #container {
+      width: 100%;
+      
+    }
+    #container #homepage #latest article {
+      margin-top: 10px;
+    }
+    .one_quarter {
+      display: block;
+      width: 47%;
+    }
+    #container #homepage #latest figure {
+      margin-left: 15px;
+    }
+    #container #homepage #latest figure img {
+      width: 100%;
+    }
+    #container #homepage #latest figure figcaption {
+      text-align: center;
+    }
+    #container #content #services ul li .clear figure img {
+      margin-left: 15px;
+    }
+    #container #right_column {
+      float: left;
+      width: 100%;
+      text-align: center;
+    }
+    #footer {
+      width: 100%;
+      display: block;
+    }
+  }
