--- a/HTML/Templates/Templateresponsives/Responsive85.css
+++ b/HTML/Templates/Templateresponsives/Responsive85.css
@@ -1,5 +1,3 @@
-
-
 *{
     padding: 0;
     margin: 0;
@@ -244,3 +242,51 @@ img {
 .f1_right{
     float: right;
 } 
+@media only screen and (max-width: 786px) {
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+    #header {
+      width: 90%;
+    }
+    #header nav {
+      width: 100%;
+    }
+    #header nav ul {
+      text-align: center;
+    }
+    #container {
+      width: 100%;
+      
+    }
+    #container #homepage #latest article {
+      margin-top: 10px;
+    }
+    .one_quarter {
+      display: block;
+      width: 47%;
+    }
+    #container #homepage #latest figure {
+      margin-left: 15px;
+    }
+    #container #homepage #latest figure img {
+      width: 100%;
+    }
+    #container #homepage #latest figure figcaption {
+      text-align: center;
+    }
+    #container #content #services ul li .clear figure img {
+      margin-left: 15px;
+    }
+    #container #right_column {
+      float: left;
+      width: 100%;
+      text-align: center;
+    }
+    #footer {
+      width: 100%;
+      display: block;
+    }
+  }
