--- a/HTML/Templates/Templateresponsives/Responsive86.css
+++ b/HTML/Templates/Templateresponsives/Responsive86.css
@@ -112,7 +112,7 @@ figure{
 #container #slider figure img{
     display: block;
     float: right;
-    width: 630px;
+    
     height: 300px;
 }
 img {
@@ -262,9 +262,52 @@ img{
     margin: 0;
     padding: 0  0 20px 0;
 }
-.f1_left{
-    float: left;
-}
-.f1_right{
-    float: right;
-} 
+
+@media only screen  and (max-width: 768px) {
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+    #header {
+      width: 90%;
+    }
+    #header nav {
+      width: 100%;
+    }
+    #header nav ul {
+      text-align: center;
+    }
+    #container {
+      width: 100%;
+      
+    }
+    #container #homepage #latest article {
+      margin-top: 10px;
+    }
+    .one_quarter {
+      display: block;
+      width: 47%;
+    }
+    #container #homepage #latest figure {
+      margin-left: 15px;
+    }
+    #container #homepage #latest figure img {
+      width: 100%;
+    }
+    #container #homepage #latest figure figcaption {
+      text-align: center;
+    }
+    #container #content #services ul li .clear figure img {
+      margin-left: 15px;
+    }
+    #container #right_column {
+      float: left;
+      width: 100%;
+      text-align: center;
+    }
+    #footer {
+      width: 100%;
+      display: block;
+    }
+  }
