--- a/HTML/templates-responsive/template1/style.css
+++ b/HTML/templates-responsive/template1/style.css
@@ -328,6 +328,9 @@ width:100%;
   .wrapper row3{
       width:100%;
   }
+  #header nav li{
+    margin-right: 0px;
+  } 
   .clear{
     display:block; 
     clear:both;
@@ -338,9 +341,7 @@ width:100%;
       padding: 0;
       margin: 0;
     }
-    #header {
-      width: 100%;
-    }
+   
     #header nav {
       width: 100%;
       margin: 0 auto;
@@ -349,27 +350,18 @@ width:100%;
     #container {
       width: 100%;
     }
-   
-   
-    #footer {
-      width: 100%;
-    }
     #header {
         width: 100%;
         background-color: lightcoral;
       }
-     #header nav {
-        width: 100%;
-      }
+    
      #header nav ul li {
         display: block;
         padding: 10px;
         text-align: center;
         border-bottom: 3px solid white;
       }
-      #container {
-        width: 100%;
-      }
+      
       #footer {
         width: 100%;
       }
