--- a/HTML/templates-responsive/template2/style.css
+++ b/HTML/templates-responsive/template2/style.css
@@ -255,7 +255,7 @@ a{
     }
     #header {
       width: 100%;
-      background-color: #ff00d4;
+      background-color: #eb197b;
     }
      #header nav {
       width: 100%;
@@ -291,9 +291,7 @@ a{
       width: 100%;
       font-size: 16px;
     }
-    #container #homepage .three_quarter {
-      width: 100%;
-    }
+    
     #footer {
       width: 100%;
     }
@@ -309,7 +307,7 @@ a{
   }
   #header {
     width: 100%;
-    background-color: #ff00d4;
+    background-color: #da1953;
   }
    #header nav {
     width: 100%;
@@ -345,9 +343,7 @@ a{
     width: 100%;
     font-size: 16px;
   }
-  #container #homepage .three_quarter {
-    width: 100%;
-  }
+  
   #footer {
     width: 100%;
   }
