--- a/RWD assignment/RWD basic 88/styles.css
+++ b/RWD assignment/RWD basic 88/styles.css
@@ -36,34 +36,34 @@
         background-color: #333333;
         overflow:auto;
     }
-    .row1 header{
+    header{
         width:960px;
         margin:0 auto;
         padding:20px 0;
         overflow:hidden;
     }
     /*--------------- Title----------------- */
-    .row1 header #title{
+    #title{
         float:left;
         margin:0 0 20px 0;   
     }
-    .row1 header #title a{
+    #title a{
         color:#C0BAB6;   
     }
     /*--------------- Nav bar----------------- */
-    header nav{
+    .header_nav{
         float:right;
         margin:10px 0 0 0;
         padding:20px 0;
         color: #C0BAB6;
         background-color: #232323
     }
-    header nav ul{
+    .header_nav ul{
         list-style-type: none;
         text-transform:uppercase;
         padding:0 20px;
     }
-    header nav ul li{
+    .header_nav ul li{
         display:inline;
         list-style-type: none;
         margin-right:25px;
@@ -71,7 +71,7 @@
     .last{
         margin-right:0;
     }
-    nav a{
+    .header_nav a{
         text-decoration:none;
         color:#C0BAB6;
     }
@@ -79,43 +79,42 @@
 
 /* ============================================ Section ============================================  */
 
-#container{
+.container{
     width:960px;
     margin:0 auto;
     overflow:hidden;
     padding:30px 0;
 }
 /* ============================ Section 1 ========================== */
-#container #section1{
+.section1{
     margin-bottom:30px;
-    height:360px;
 }
 /*==========================================section 2==========================================*/
-#section2{
+.section2{
     margin-bottom:30px;
     overflow:auto;
 }
-#section2 article{
+.section2 article{
     float:left;
     width:300px;    
     margin-right:30px;
     color: #919191;
 }
-#section2 #article3{  
+.section2 #article3{  
     margin-right:0;
 }
-#section2 article figure img{
+.section2 article figure img{
     border:1px solid #DEDEDE;
     padding:4px;
     margin-bottom:10px;
 }
-#section2 article figcaption h2{
+.section2 article figcaption h2{
     font-size:14px;
     font-weight:bold;
     font-style:italic;
     line-height:normal;
 }
-#section2 article figcaption .para{
+.section2 article figcaption .para{
     margin:13px 0;
     line-height:1.6em;
 }
@@ -131,31 +130,31 @@
 /*==============================================================================================*/
 
 /*==========================================section 3==========================================*/
-#section3{
+.section3{
     overflow:auto;
     width:100%;
 }
-#section3 figure {
+.section3 figure {
     float:right;
 }
-#section3 figcaption{
+.section3 figcaption{
     float:left;
     width:460px;
     color: #989898;
     line-height:1.6em;
 }
-#section3 figure img{
+.section3 figure img{
     padding:4px;
     border: 1px solid #D6D6D6;
     margin-bottom:10px;
 }
-#section3 figcaption strong{
+.section3 figcaption strong{
     font-size:32px;
     font-style: italic;
     font-weight:normal;
     line-height:normal;
 }
-#section3 figcaption p{
+.section3 figcaption p{
     margin:13px 0;
 }
 /*==============================================================================================*/
@@ -164,7 +163,7 @@
 .row3{
     background-color:#333333;
 }
-#details{
+.details{
     background-color:#333333;
     width:960px;
     margin:0 auto;
@@ -172,16 +171,16 @@
     overflow:auto;
     line-height:1.4em;
 }
-#details section{
+.details section{
     float:left;
     margin-right:20px;
     width:225px;
 }
-#details #details-section4{
+.details #details-section4{
     margin-right:0;
     float:right;
 }
-#details section h2{
+.details section h2{
     font-size:12px;
     margin-bottom:25px;
     font-weight:bold;
@@ -190,12 +189,12 @@
     line-height: normal;
     color: #ffffff
 }
-#details section nav ul li{
+.details section nav ul li{
     margin-bottom:5px;
     padding-bottom:5px;
     border-bottom: 1px solid #555555;
 }
-#details section nav ul li a{
+.details section nav ul li a{
     color: #FF9900;
     background-color: #333333;
     font-size:12px;
@@ -222,3 +221,197 @@
     float:right;
     padding:20px 0;
 }
+
+
+/* ===================== Media Queries ======================= */
+
+/* mobile devices */
+@media only screen and (max-width: 600px) {
+    * {
+      box-sizing: border-box;
+    }
+  
+    [class*="col-"] {
+      width: 100%;
+    }
+  
+    header {
+      padding: 20px 0 0 0;
+    }
+    #title {
+      float: none;
+      text-align: center;
+    }
+    .header_nav {
+      float: none;
+      padding: 0;
+    }
+    .header_nav ul {
+      padding: 10px 20px 0 20px;
+      background: transparent;
+    }
+    .header_nav ul li {
+      display: block;
+      text-align: center;
+      text-transform: uppercase;
+      background-color: thistle;
+      padding: 5px 0px;
+      margin: 0 0 8px 0;
+    }
+    .header_nav ul li a {
+      color: black;
+      font-weight: bold;
+    }
+  
+    .container {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+    .section1{
+        height:auto;
+    }
+    .section1 img{
+        width:100%;
+        height:auto;
+    }
+    .section2{
+        margin-bottom:30px;
+        overflow:auto;
+    }
+    .section2 article{
+        float:none;
+        width:100%;   
+        text-align:center; 
+    }
+    .section2 article figure img{
+        width:75%;
+    }
+    .section3 figure {
+        float:none;
+    }
+    .section3 figcaption{
+        float:none;
+        width:100%;
+    }
+    .section3 figure img{
+        width:100%;
+
+    }
+    .details{
+        column-count: 2;
+    }
+    .details section{
+        width:100%;
+        margin-bottom:30px;
+    }
+    footer {
+      padding: 20px;
+      text-align: center;
+    }
+    #left_footer,
+    #right_footer {
+      float: none;
+      width: 100%;
+      padding: 10px 0;
+    }
+  }
+  
+  /* Tablet */
+  @media only screen and (min-width: 601px) and (max-width: 960px) {
+    *{
+      box-sizing: border-box;
+      margin: 0px;
+      padding: 0px;
+    }
+    .col-1 {
+      width: 8.33%;
+    }
+    .col-2 {
+      width: 16.66%;
+    }
+    .col-3 {
+      width: 25%;
+    }
+    .col-4 {
+      width: 33.33%;
+    }
+    .col-5 {
+      width: 41.66%;
+    }
+    .col-6 {
+      width: 50%;
+    }
+    .col-7 {
+      width: 58.33%;
+    }
+    .col-8 {
+      width: 66.66%;
+    }
+    .col-9 {
+      width: 75%;
+    }
+    .col-10 {
+      width: 83.33%;
+    }
+    .col-11 {
+      width: 91.66%;
+    }
+    .col-12 {
+      width: 100%;
+    }
+  
+    header {
+      padding: 20px 20px;
+    }
+    #title {
+      float:none;
+      text-align: center;
+    }
+    .header_nav ul {
+      text-align: center;
+    }
+    .container {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+    .section1{
+        height:auto;
+    }
+    .section1 img{
+        width:100%;
+        height:auto;
+    }
+    .section2 article{
+        float:none;
+        width:100%;
+    }
+    .section2 figure {
+        float:left;
+    }
+    .section2 figure img{
+        width:90%;
+    }
+    .section2 figcaption{
+        float:left;
+        /* width:100%; */
+    }
+    .section3 figure img{
+        width:100%;
+
+    }
+    .details{
+        column-count: 2;
+    }
+    .details section{
+        width:100%;
+        margin-bottom:30px;
+    }
+    
+    footer {
+      padding: 0 20px;
+    }
+    #left_footer,
+    #right_footer {
+      padding: 20px 5px;
+    }
+  } 
